--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-architect
 
-title: [The title of your site]
-description: [A short description of your site's purpose]
+title: Charles' Learning for Stock
+description: My personal notes
